2007-07-24  Torsten Rahn  <rahn@kde.org>
	- 6 digits column and row coordinates for tiles
	- adjusting the BlueMarble and CityLights theme appearance 
	  to the uploaded tiles

2007-07-23  Murad Tagirov  <tmurad@gmail.com>
    Fixed compilation of code ifdefed with KML_GSOC
    * src/lib/MarbleModel.cpp

2007-07-23  Inge Wallin  <inge@lysator.liu.se>

	Move the image caches to ViewParams (same commit as the next entry)
	* src/lib/ViewParams.h (ViewParams): m_coastImage: New member
	* src/lib/ViewParams.cpp (ViewParams): Initialize new member
	* src/lib/MarbleWidget.cpp: Use new call conventions everyhere
	* src/lib/MarbleModel.{h,cpp} (paintGlobe): new parameters:
	width,height

	Make the resize functions take width, height parameters instead of
	a QImage*
	* src/lib/MarbleModel.cpp (resize): Take width,height parameters
	and use them for all calls.
	* src/lib/AbstractScanlineTextureMapper.cpp (resizeMap):
	* src/lib/GlobeScanlineTextureMapper.cpp (resizeMap):
	* src/lib/GridMap.cpp (resizeMap):
	* src/lib/vectorcomposer.cpp (resizeMap):
	* src/lib/vectormap.cpp (resizeMap): Take width,height parameters
	instead of a QImage*.

	Move some more view parameters to ViewParams
	* src/lib/ViewParams.h (ViewParams): Added members m_showGrid,
	m_showPlaceMarks, m_showElevationModel
	* src/lib/ViewParams.cpp (ViewParams): Initialize new members
	* src/lib/Marble{Model,Widget}.{h,cpp} (showGrid, showPlaceMarks,
	showElevationModel + set... methods): Remove. Use the ones in
	MarbleWidget or ViewParams instead.

2007-07-20  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issue 23: Spelling errors.
	* src/lib/AbstractLayer/AbstractLayer.h (class AbstractLayer): Fix
	spelling mistakes

	Remove warnings
	* src/lib/gps/GpxSax.cpp: Remove most warnings
	* src/lib/AbstractLayer/AbstractLayer.cpp
	* src/lib/AbstractLayer/AbstractLayerData.cpp
	* src/lib/placemarkpainter.cpp
	* src/lib/kml/KMLObject.cpp
	* src/lib/kml/KMLPointParser.cpp
	* src/lib/kml/KMLFeatureParser.cpp