@@ -1,3 +1,8 @@
+2007-07-24  Inge Wallin  <inge@lysator.liu.se>
+
+	Fix krazy issue 4: Check for an acceptable copyright.
+	* src/lib/utils.h: Fix Copyright.
+
 2007-07-24  Torsten Rahn  <rahn@kde.org>
 	- 6 digits column and row coordinates for tiles
 	- adjusting the BlueMarble and CityLights theme appearance 
